# bdsc-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: release  render_homebrew_formula.py  sync-version.sh
src/bdsc_cli/: cli.py  core.py
tests/: test_core.py  test_release_tools.py
