[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bdsc-cli"
version = "0.1.0"
description = "Sync and query BDSC datasets locally"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Gustavo Madeira Santana" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
bdsc = "bdsc_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

