[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bdsc-cli"
dynamic = ["version"]
description = "Sync and query BDSC datasets locally"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["bdsc", "drosophila", "cli", "bioinformatics", "genetics"]
authors = [
  { name = "Gustavo Madeira Santana" }
]
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent"
]

[project.optional-dependencies]
release = [
  "build>=1.2.2",
  "twine>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/gumadeiras/bdsc-cli"
Repository = "https://github.com/gumadeiras/bdsc-cli"
Issues = "https://github.com/gumadeiras/bdsc-cli/issues"

[project.scripts]
bdsc = "bdsc_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "bdsc_cli.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
